@startuml

class AppMVC
"Interface (Model)" <|-- AppMVC
"Interface (View)" <|-- AppMVC
"Interface (Controller)" <|-- AppMVC

' Model '
interface ModelModule <<trait>>

interface "Provider (Model)" <<trait>> {
  model: ModelType
}

"Provider (Model)" --* ModelModule

class AppModelModule extends ModelModule {
}

interface "Component (Model)" <<trait>>

"Component (Model)" --* AppModelModule

interface "Interface (Model)" <<trait>>
"Provider (Model)" <|-- "Interface (Model)"
"Component (Model)" <|-- "Interface (Model)"

AppModelModule *-- "Interface (Model)"

' View '
interface ViewModule <<trait>>

interface "Provider (View)" <<trait>> {
  view: ViewType
}

"Provider (View)" --* ViewModule

class AppViewModule extends ViewModule {
}

interface "Component (View)" <<trait>>

"Component (View)" --* AppViewModule

interface "Interface (View)" <<trait>>
"Provider (View)" <|-- "Interface (View)"
"Component (View)" <|-- "Interface (View)"

AppViewModule *-- "Interface (View)"

' Controller '
interface ControllerModule <<trait>>

interface "Provider (Controller)" <<trait>> {
  controller: ControllerType
}

"Provider (Controller)" --* ControllerModule

class AppControllerModule extends ControllerModule {
}

interface "Component (Controller)" <<trait>>

"Component (Controller)" --* AppControllerModule

interface "Interface (Controller)" <<trait>>
"Provider (Controller)" <|-- "Interface (Controller)"
"Component (Controller)" <|-- "Interface (Controller)"

AppControllerModule *-- "Interface (Controller)"

@enduml